[gd_scene load_steps=9 format=2]

[ext_resource path="res://Audio/Sounds/ShootSound.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Sounds/HurtSound.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Sounds/DeathSound.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Sounds/RunSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Sounds/JumpSound.wav" type="AudioStream" id=5]
[ext_resource path="res://Scripts/CharacterCore.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ProjectilesPool.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Projectile/Projectile.tscn" type="PackedScene" id=8]

[node name="CharacterCore" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="AreaCollider" type="CollisionShape2D" parent="Hitbox"]

[node name="Sounds" type="Node" parent="."]

[node name="StepSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="ShootSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 1 )

[node name="HurtSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )

[node name="DeathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Weapon" type="Node2D" parent="."]

[node name="FireRate" type="Timer" parent="Weapon"]

[node name="ShootPos" type="Position2D" parent="Weapon"]

[node name="Projectiles" type="Node" parent="Weapon"]
script = ExtResource( 7 )

[node name="Projectile" parent="Weapon/Projectiles" instance=ExtResource( 8 )]
visible = false

[node name="ImmortalDuration" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Weapon/FireRate" to="." method="shooting_cooled_down"]
